@@ -94,6 +94,14 @@ import hudson.util.jna.GNUCLibrary;
 import hudson.views.MyViewsTabBar;
 import hudson.views.ViewsTabBar;
 import hudson.widgets.RenderOnDemandClosure;
+import io.jenkins.servlet.ServletExceptionWrapper;
+import io.jenkins.servlet.http.CookieWrapper;
+import io.jenkins.servlet.http.HttpServletRequestWrapper;
+import io.jenkins.servlet.http.HttpServletResponseWrapper;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
@@ -116,6 +124,9 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.DecimalFormat;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -144,10 +155,8 @@ import java.util.logging.Logger;
 import java.util.logging.SimpleFormatter;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jenkins.console.ConsoleUrlProvider;
+import jenkins.console.WithConsoleUrl;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.GlobalConfigurationCategory;
 import jenkins.model.Jenkins;
@@ -161,7 +170,6 @@ import org.apache.commons.jelly.Script;
 import org.apache.commons.jelly.XMLOutput;
 import org.apache.commons.jexl.parser.ASTSizeFunction;
 import org.apache.commons.jexl.util.Introspector;
-import org.apache.commons.lang.StringUtils;
 import org.jenkins.ui.icon.Icon;
 import org.jenkins.ui.icon.IconSet;
 import org.jvnet.tiger_types.Types;
@@ -172,7 +180,9 @@ import org.kohsuke.stapler.Ancestor;
 import org.kohsuke.stapler.RawHtmlArgument;
 import org.kohsuke.stapler.Stapler;
 import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.springframework.security.access.AccessDeniedException;
 
 /**
@@ -217,12 +227,12 @@ public class Functions {
     }
 
     public static String xsDate(Calendar cal) {
-        return Util.XS_DATETIME_FORMATTER.format(cal.getTime());
+        return Util.XS_DATETIME_FORMATTER2.format(cal.toInstant());
     }
 
     @Restricted(NoExternalUse.class)
     public static String iso8601DateTime(Date date) {
-        return Util.XS_DATETIME_FORMATTER.format(date);
+        return Util.XS_DATETIME_FORMATTER2.format(date.toInstant());
     }
 
     /**
@@ -234,7 +244,7 @@ public class Functions {
     }
 
     public static String rfc822Date(Calendar cal) {
-        return Util.RFC822_DATETIME_FORMATTER.format(cal.getTime());
+        return DateTimeFormatter.RFC_1123_DATE_TIME.format(ZonedDateTime.ofInstant(cal.toInstant(), ZoneId.systemDefault()));
     }
 
     /**
@@ -272,8 +282,8 @@ public class Functions {
     }
 
     public static void initPageVariables(JellyContext context) {
-        StaplerRequest currentRequest = Stapler.getCurrentRequest();
-        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse());
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
+        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse2());
         String rootURL = currentRequest.getContextPath();
 
         Functions h = new Functions();
@@ -312,8 +322,7 @@ public class Functions {
      */
     public static <B> Class getTypeParameter(Class<? extends B> c, Class<B> base, int n) {
         Type parameterization = Types.getBaseClass(c, base);
-        if (parameterization instanceof ParameterizedType) {
-            ParameterizedType pt = (ParameterizedType) parameterization;
+        if (parameterization instanceof ParameterizedType pt) {
             return Types.erasure(Types.getTypeArgument(pt, n));
         } else {
             throw new AssertionError(c + " doesn't properly parameterize " + base);
@@ -369,7 +378,10 @@ public class Functions {
         return buf.toString();
     }
 
-    public static RunUrl decompose(StaplerRequest req) {
+    /**
+     * @since 2.475
+     */
+    public static RunUrl decompose(StaplerRequest2 req) {
         List<Ancestor> ancestors = req.getAncestors();
 
         // find the first and last Run instances
@@ -403,11 +415,19 @@ public class Functions {
     }
 
     /**
+     * @deprecated use {@link #decompose(StaplerRequest2)}
+     */
+    @Deprecated
+    public static RunUrl decompose(StaplerRequest req) {
+        return decompose(StaplerRequest.toStaplerRequest2(req));
+    }
+
+    /**
      * If we know the user's screen resolution, return it. Otherwise null.
      * @since 1.213
      */
     public static Area getScreenResolution() {
-        Cookie res = Functions.getCookie(Stapler.getCurrentRequest(), "screenResolution");
+        Cookie res = Functions.getCookie(Stapler.getCurrentRequest2(), "screenResolution");
         if (res != null)
             return Area.parse(res.getValue());
         return null;
@@ -589,6 +609,9 @@ public class Functions {
         return list;
     }
 
+    /**
+     * @since 2.475
+     */
     public static Cookie getCookie(HttpServletRequest req, String name) {
         Cookie[] cookies = req.getCookies();
         if (cookies != null) {
@@ -601,10 +624,29 @@ public class Functions {
         return null;
     }
 
+    /**
+     * @deprecated use {@link #getCookie(HttpServletRequest, String)}
+     */
+    @Deprecated
+    public static javax.servlet.http.Cookie getCookie(javax.servlet.http.HttpServletRequest req, String name) {
+        return CookieWrapper.fromJakartaServletHttpCookie(getCookie(HttpServletRequestWrapper.toJakartaHttpServletRequest(req), name));
+    }
+
+    /**
+     * @since 2.475
+     */
     public static String getCookie(HttpServletRequest req, String name, String defaultValue) {
         Cookie c = getCookie(req, name);
         if (c == null || c.getValue() == null) return defaultValue;
         return c.getValue();
+    }
+
+    /**
+     * @deprecated use {@link #getCookie(HttpServletRequest, String, String)}
+     */
+    @Deprecated
+    public static String getCookie(javax.servlet.http.HttpServletRequest req, String name, String defaultValue) {
+        return getCookie(HttpServletRequestWrapper.toJakartaHttpServletRequest(req), name, defaultValue);
     }
 
     private static final Pattern ICON_SIZE = Pattern.compile("\\d+x\\d+");
@@ -690,13 +732,13 @@ public class Functions {
     }
 
     @Restricted(NoExternalUse.class)
-    public static String getUserTimeZonePostfix() {
+    public static String getUserTimeZonePostfix(Date date) {
         if (!isUserTimeZoneOverride()) {
             return "";
         }
 
         TimeZone tz = TimeZone.getTimeZone(getUserTimeZone());
-        return tz.getDisplayName(tz.observesDaylightTime(), TimeZone.SHORT);
+        return tz.getDisplayName(tz.inDaylightTime(date), TimeZone.SHORT, getCurrentLocale());
     }
 
     @Restricted(NoExternalUse.class)
@@ -710,8 +752,10 @@ public class Functions {
      * Finds the given object in the ancestor list and returns its URL.
      * This is used to determine the "current" URL assigned to the given object,
      * so that one can compute relative URLs from it.
+     *
+     * @since 2.475
      */
-    public static String getNearestAncestorUrl(StaplerRequest req, Object it) {
+    public static String getNearestAncestorUrl(StaplerRequest2 req, Object it) {
         List list = req.getAncestors();
         for (int i = list.size() - 1; i >= 0; i--) {
             Ancestor anc = (Ancestor) list.get(i);
@@ -722,10 +766,18 @@ public class Functions {
     }
 
     /**
+     * @deprecated use {@link #getNearestAncestorUrl(StaplerRequest2, Object)}
+     */
+    @Deprecated
+    public static String getNearestAncestorUrl(StaplerRequest req, Object it) {
+        return getNearestAncestorUrl(StaplerRequest.toStaplerRequest2(req), it);
+    }
+
+    /**
      * Finds the inner-most {@link SearchableModelObject} in scope.
      */
     public static String getSearchURL() {
-        List list = Stapler.getCurrentRequest().getAncestors();
+        List list = Stapler.getCurrentRequest2().getAncestors();
         for (int i = list.size() - 1; i >= 0; i--) {
             Ancestor anc = (Ancestor) list.get(i);
             if (anc.getObject() instanceof SearchableModelObject)
@@ -758,6 +810,19 @@ public class Functions {
         return s.indexOf('\r') >= 0 || s.indexOf('\n') >= 0;
     }
 
+    /**
+     * Percent-encodes space and non-ASCII UTF-8 characters for use in URLs.
+     * <pre>
+     * Input example  1: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]- =
+     * Output example 1: !"%C2%A3$%^&amp;*()_+}{:@~?&gt;&lt;|%C2%AC`,./;'#[]-%20=
+     * </pre>
+     * Notes:
+     * <ul>
+     * <li>a blank space will render as %20</li>
+     * <li>this methods only escapes non-ASCII but leaves other URL-unsafe characters, such as '#'</li>
+     * <li>{@link hudson.Util#rawEncode(String)} in the {@link hudson.Util} library should generally be used instead (do check the documentation for that method)</li>
+     * </ul>
+     */
     public static String encode(String s) {
         return Util.encode(s);
     }
@@ -766,6 +831,13 @@ public class Functions {
      * Shortcut function for calling {@link URLEncoder#encode(String,String)} (with UTF-8 encoding).<br>
      * Useful for encoding URL query parameters in jelly code (as in {@code "...?param=${h.urlEncode(something)}"}).<br>
      * For convenience in jelly code, it also accepts null parameter, and then returns an empty string.
+     * <pre>
+     * Input example  1: &amp; " ' &lt; &gt;
+     * Output example 1: %26+%22+%27+%3C+%3E
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: %21%22%C2%A3%24%25%5E%26*%28%29_%2B%7D%7B%3A%40%7E%3F%3E%3C%7C%C2%AC%60%2C.%2F%3B%27%23%5B%5D-%3D
+     * </pre>
+     * Note: A blank space will render as + (You can see this in above examples)
      *
      * @since 2.200
      */
@@ -776,10 +848,31 @@ public class Functions {
         return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 
+    /**
+     * Transforms the input string so it renders as written in HTML output: newlines are converted to HTML line breaks, consecutive spaces are retained as {@code &amp;nbsp;}, and HTML metacharacters are escaped.
+     * <pre>
+     * Input example  1: &amp; " ' &lt; &gt;
+     * Output example 1: &amp;amp; &amp;quot; &amp;#039; &amp;lt; &amp;gt;
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: !&amp;quot;£$%^&amp;amp;*()_+}{:@~?&amp;gt;&amp;lt;|¬`,./;&amp;#039;#[]-=
+     * </pre>
+     * @see #xmlEscape
+     * @see hudson.Util#escape
+     */
     public static String escape(String s) {
         return Util.escape(s);
     }
 
+    /**
+     * Escapes XML unsafe characters
+     * <pre>
+     * Input example  1: &lt; &gt; &amp;
+     * Output example 1: &amp;lt; &amp;gt; &amp;amp;
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: !"£$%^&amp;amp;*()_+}{:@~?&amp;gt;&amp;lt;|¬`,./;'#[]-=
+     * </pre>
+     *  @see hudson.Util#xmlEscape
+     */
     public static String xmlEscape(String s) {
         return Util.xmlEscape(s);
     }
@@ -788,6 +881,16 @@ public class Functions {
         return s.replace("&lt;", "<").replace("&gt;", ">").replace("&amp;", "&");
     }
 
+    /**
+     * Escapes a string so it can be used in an HTML attribute value.
+     * <pre>
+     * Input example  1: &amp; " ' &lt; &gt;
+     * Output example 1: &amp;amp; &amp;quot; &amp;#39; &amp;lt; &amp;gt;
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: !&amp;quot;£$%^&amp;amp;*()_+}{:@~?&amp;gt;&amp;lt;|¬`,./;&amp;#39;#[]-=
+     * </pre>
+     * Note: 2 consecutive blank spaces will not render any special chars.
+     */
     public static String htmlAttributeEscape(String text) {
         StringBuilder buf = new StringBuilder(text.length() + 64);
         for (int i = 0; i < text.length(); i++) {
@@ -834,7 +937,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             checkPermission((AccessControlled) object, permission);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
             for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
@@ -866,7 +969,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             return ((AccessControlled) object).hasPermission(permission);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
             for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
@@ -877,10 +980,13 @@ public class Functions {
         }
     }
 
-    public static void adminCheck(StaplerRequest req, StaplerResponse rsp, Object required, Permission permission) throws IOException, ServletException {
+    /**
+     * @since 2.475
+     */
+    public static void adminCheck(StaplerRequest2 req, StaplerResponse2 rsp, Object required, Permission permission) throws IOException, ServletException {
         // this is legacy --- all views should be eventually converted to
         // the permission based model.
-        if (required != null && !Hudson.adminCheck(req, rsp)) {
+        if (required != null && !Hudson.adminCheck(StaplerRequest.fromStaplerRequest2(req), StaplerResponse.fromStaplerResponse2(rsp))) {
             // check failed. commit the FORBIDDEN response, then abort.
             rsp.setStatus(HttpServletResponse.SC_FORBIDDEN);
             rsp.getOutputStream().close();
@@ -892,10 +998,24 @@ public class Functions {
             checkPermission(permission);
     }
 
+   /**
+     * @deprecated use {@link #adminCheck(StaplerRequest2, StaplerResponse2, Object, Permission)}
+     */
+    @Deprecated
+    public static void adminCheck(StaplerRequest req, StaplerResponse rsp, Object required, Permission permission) throws IOException, javax.servlet.ServletException {
+        try {
+            adminCheck(StaplerRequest.toStaplerRequest2(req), StaplerResponse.toStaplerResponse2(rsp), required, permission);
+        } catch (ServletException e) {
+            throw ServletExceptionWrapper.fromJakartaServletException(e);
+        }
+    }
+
     /**
      * Infers the hudson installation URL from the given request.
+     *
+     * @since 2.475
      */
-    public static String inferHudsonURL(StaplerRequest req) {
+    public static String inferHudsonURL(StaplerRequest2 req) {
         String rootUrl = Jenkins.get().getRootUrl();
         if (rootUrl != null)
             // prefer the one explicitly configured, to work with load-balancer, frontend, etc.
@@ -910,12 +1030,20 @@ public class Functions {
     }
 
     /**
+     * @deprecated use {@link #inferHudsonURL(StaplerRequest2)}
+     */
+    @Deprecated
+    public static String inferHudsonURL(StaplerRequest req) {
+        return inferHudsonURL(StaplerRequest.toStaplerRequest2(req));
+    }
+
+    /**
      * Returns the link to be displayed in the footer of the UI.
      */
     public static String getFooterURL() {
         if (footerURL == null) {
             footerURL = SystemProperties.getString("hudson.footerURL");
-            if (StringUtils.isBlank(footerURL)) {
+            if (footerURL == null || footerURL.isBlank()) {
                 footerURL = "https://www.jenkins.io/";
             }
         }
@@ -1172,7 +1300,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             return hasAnyPermission((AccessControlled) object, permissions);
         else {
-            AccessControlled ac = Stapler.getCurrentRequest().findAncestorObject(AccessControlled.class);
+            AccessControlled ac = Stapler.getCurrentRequest2().findAncestorObject(AccessControlled.class);
             if (ac != null) {
                 return hasAnyPermission(ac, permissions);
             }
@@ -1210,7 +1338,7 @@ public class Functions {
         if (object instanceof AccessControlled)
             checkAnyPermission((AccessControlled) object, permissions);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
             for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
@@ -1281,7 +1409,7 @@ public class Functions {
         Map<Object, String> ancestors = new HashMap<>();
         View view = null;
 
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         for (Ancestor a : request.getAncestors()) {
             ancestors.put(a.getObject(), a.getRelativePath());
             if (a.getObject() instanceof View)
@@ -1367,7 +1495,7 @@ public class Functions {
         StringBuilder buf = new StringBuilder();
         Item i = p;
         while (true) {
-            if (buf.length() > 0) buf.insert(0, separationString);
+            if (!buf.isEmpty()) buf.insert(0, separationString);
             buf.insert(0, useDisplayName ? i.getDisplayName() : i.getName());
             ItemGroup gr = i.getParent();
 
@@ -1569,6 +1697,15 @@ public class Functions {
         return Collections.emptyList();
     }
 
+    /**
+     * Escape a string so variable values can be used in inline JavaScript in views.
+     * Note that inline JavaScript and especially passing variables is discouraged, see the documentation for alternatives.
+     * <pre>
+     * Input example : \ \\ ' "
+     * Output example: \\ \\\\ \' \"
+     * </pre>
+     * @see <a href="https://www.jenkins.io/doc/developer/security/xss-prevention/#passing-values-to-javascript">Passing values to JavaScript</a>
+     */
     public static String jsStringEscape(String s) {
         if (s == null) return null;
         StringBuilder buf = new StringBuilder();
@@ -1595,7 +1732,7 @@ public class Functions {
      * Converts "abc" to "Abc".
      */
     public static String capitalize(String s) {
-        if (s == null || s.length() == 0) return s;
+        if (s == null || s.isEmpty()) return s;
         return Character.toUpperCase(s.charAt(0)) + s.substring(1);
     }
 
@@ -1618,7 +1755,7 @@ public class Functions {
         if (it instanceof Descriptor)
             clazz = ((Descriptor) it).clazz;
 
-        String buf = Stapler.getCurrentRequest().getContextPath() + Jenkins.VIEW_RESOURCE_PATH + '/' +
+        String buf = Stapler.getCurrentRequest2().getContextPath() + Jenkins.VIEW_RESOURCE_PATH + '/' +
                 clazz.getName().replace('.', '/').replace('$', '/') +
                 '/' + path;
         return buf;
@@ -1626,7 +1763,7 @@ public class Functions {
 
     public static boolean hasView(Object it, String path) throws IOException {
         if (it == null)    return false;
-        return Stapler.getCurrentRequest().getView(it, path) != null;
+        return Stapler.getCurrentRequest2().getView(it, path) != null;
     }
 
     /**
@@ -1807,9 +1944,9 @@ public class Functions {
     public static String joinPath(String... components) {
         StringBuilder buf = new StringBuilder();
         for (String s : components) {
-            if (s.length() == 0)  continue;
+            if (s.isEmpty())  continue;
 
-            if (buf.length() > 0) {
+            if (!buf.isEmpty()) {
                 if (buf.charAt(buf.length() - 1) != '/')
                     buf.append('/');
                 if (s.charAt(0) == '/')   s = s.substring(1);
@@ -1837,10 +1974,21 @@ public class Functions {
             return null;
         }
         if (urlName.startsWith("/"))
-            return joinPath(Stapler.getCurrentRequest().getContextPath(), urlName);
+            return joinPath(Stapler.getCurrentRequest2().getContextPath(), urlName);
         else
             // relative URL name
-            return joinPath(Stapler.getCurrentRequest().getContextPath() + '/' + itUrl, urlName);
+            return joinPath(Stapler.getCurrentRequest2().getContextPath() + '/' + itUrl, urlName);
+    }
+
+    /**
+     * Computes the link to the console for the run for the specified object, taking {@link ConsoleUrlProvider} into account.
+     * @param withConsoleUrl the object to compute a console url for (can be {@link Run}, a {@code PlaceholderExecutable}...)
+     * @return the absolute URL for accessing the build console for the given object, or null if there is no console URL defined for the object.
+     * @since 2.433
+     */
+    public static @CheckForNull String getConsoleUrl(WithConsoleUrl withConsoleUrl) {
+        String consoleUrl = withConsoleUrl.getConsoleUrl();
+        return consoleUrl != null ? Stapler.getCurrentRequest().getContextPath() + '/' + consoleUrl : null;
     }
 
     /**
@@ -1886,7 +2034,7 @@ public class Functions {
         } catch (MalformedURLException e) {
             // fall back to HTTP request
         }
-        return Stapler.getCurrentRequest().getServerName();
+        return Stapler.getCurrentRequest2().getServerName();
     }
 
     /**
@@ -1898,8 +2046,7 @@ public class Functions {
     @Deprecated
     public String getCheckUrl(String userDefined, Object descriptor, String field) {
         if (userDefined != null || field == null)   return userDefined;
-        if (descriptor instanceof Descriptor) {
-            Descriptor d = (Descriptor) descriptor;
+        if (descriptor instanceof Descriptor d) {
             return d.getCheckUrl(field);
         }
         return null;
@@ -1912,8 +2059,7 @@ public class Functions {
     public void calcCheckUrl(Map attributes, String userDefined, Object descriptor, String field) {
         if (userDefined != null || field == null)   return;
 
-        if (descriptor instanceof Descriptor) {
-            Descriptor d = (Descriptor) descriptor;
+        if (descriptor instanceof Descriptor d) {
             CheckMethod m = d.getCheckMethod(field);
             attributes.put("checkUrl", m.toStemUrl());
             attributes.put("checkDependsOn", m.getDependsOn());
@@ -1926,7 +2072,7 @@ public class Functions {
      * Used in {@code task.jelly} to decide if the page should be highlighted.
      */
     public boolean hyperlinkMatchesCurrentPage(String href) {
-        String url = Stapler.getCurrentRequest().getRequestURL().toString();
+        String url = Stapler.getCurrentRequest2().getRequestURL().toString();
         if (href == null || href.length() <= 1) return ".".equals(href) && url.endsWith("/");
         url = URLDecoder.decode(url, StandardCharsets.UTF_8);
         href = URLDecoder.decode(href, StandardCharsets.UTF_8);
@@ -1976,7 +2122,7 @@ public class Functions {
      * Prepend a prefix only when there's the specified body.
      */
     public String prepend(String prefix, String body) {
-        if (body != null && body.length() > 0)
+        if (body != null && !body.isEmpty())
             return prefix + body;
         return body;
     }
@@ -1985,10 +2131,21 @@ public class Functions {
         return CrumbIssuer.all();
     }
 
-    public static String getCrumb(StaplerRequest req) {
+    /**
+     * @since 2.475
+     */
+    public static String getCrumb(StaplerRequest2 req) {
         Jenkins h = Jenkins.getInstanceOrNull();
         CrumbIssuer issuer = h != null ? h.getCrumbIssuer() : null;
         return issuer != null ? issuer.getCrumb(req) : "";
+    }
+
+    /**
+     * @deprecated use {@link #getCrumb(StaplerRequest2)}
+     */
+    @Deprecated
+    public static String getCrumb(StaplerRequest req) {
+        return getCrumb(req != null ? StaplerRequest.toStaplerRequest2(req) : null);
     }
 
     public static String getCrumbRequestField() {
@@ -2003,7 +2160,7 @@ public class Functions {
 
     public static Locale getCurrentLocale() {
         Locale locale = null;
-        StaplerRequest req = Stapler.getCurrentRequest();
+        StaplerRequest2 req = Stapler.getCurrentRequest2();
         if (req != null)
             locale = req.getLocale();
         if (locale == null)
@@ -2016,7 +2173,7 @@ public class Functions {
      * from {@link ConsoleAnnotatorFactory}s and {@link ConsoleAnnotationDescriptor}s.
      */
     public static String generateConsoleAnnotationScriptAndStylesheet() {
-        String cp = Stapler.getCurrentRequest().getContextPath() + Jenkins.RESOURCE_PATH;
+        String cp = Stapler.getCurrentRequest2().getContextPath() + Jenkins.RESOURCE_PATH;
         StringBuilder buf = new StringBuilder();
         for (ConsoleAnnotatorFactory f : ConsoleAnnotatorFactory.all()) {
             String path = cp + "/extensionList/" + ConsoleAnnotatorFactory.class.getName() + "/" + f.getClass().getName();
@@ -2069,7 +2226,7 @@ public class Functions {
         }
 
         /* Mask from Extended Read */
-        StaplerRequest req = Stapler.getCurrentRequest();
+        StaplerRequest2 req = Stapler.getCurrentRequest2();
         if (o instanceof Secret || Secret.BLANK_NONSECRET_PASSWORD_FIELDS_WITHOUT_ITEM_CONFIGURE) {
             if (req != null) {
                 Item item = req.findAncestorObject(Item.class);
@@ -2115,7 +2272,7 @@ public class Functions {
             int firstPeriod = part.indexOf(".");
             return slash > 0 && firstPeriod > 0 && slash < firstPeriod;
         }).collect(Collectors.joining(" "));
-        if (StringUtils.isBlank(views)) {
+        if (views == null || views.isBlank()) {
             // fallback to full thread name if there are no apparent views
             return threadName;
         }
@@ -2163,8 +2320,19 @@ public class Functions {
         return SystemProperties.getBoolean("hudson.security.WipeOutPermission");
     }
 
+    @Deprecated
     public static String createRenderOnDemandProxy(JellyContext context, String attributesToCapture) {
-        return Stapler.getCurrentRequest().createJavaScriptProxy(new RenderOnDemandClosure(context, attributesToCapture));
+        return Stapler.getCurrentRequest2().createJavaScriptProxy(new RenderOnDemandClosure(context, attributesToCapture));
+    }
+
+    /**
+     * Called from renderOnDemand.jelly to generate the parameters for the proxy object generation.
+     *
+     * @since 2.475
+     */
+    @Restricted(NoExternalUse.class)
+    public static StaplerRequest2.RenderOnDemandParameters createRenderOnDemandProxyParameters(JellyContext context, String attributesToCapture) {
+        return Stapler.getCurrentRequest2().createJavaScriptProxyParameters(new RenderOnDemandClosure(context, attributesToCapture));
     }
 
     public static String getCurrentDescriptorByNameUrl() {
@@ -2173,18 +2341,18 @@ public class Functions {
 
     public static String setCurrentDescriptorByNameUrl(String value) {
         String o = getCurrentDescriptorByNameUrl();
-        Stapler.getCurrentRequest().setAttribute("currentDescriptorByNameUrl", value);
+        Stapler.getCurrentRequest2().setAttribute("currentDescriptorByNameUrl", value);
 
         return o;
     }
 
     public static void restoreCurrentDescriptorByNameUrl(String old) {
-        Stapler.getCurrentRequest().setAttribute("currentDescriptorByNameUrl", old);
+        Stapler.getCurrentRequest2().setAttribute("currentDescriptorByNameUrl", old);
     }
 
     public static List<String> getRequestHeaders(String name) {
         List<String> r = new ArrayList<>();
-        Enumeration e = Stapler.getCurrentRequest().getHeaders(name);
+        Enumeration e = Stapler.getCurrentRequest2().getHeaders(name);
         while (e.hasMoreElements()) {
             r.add(e.nextElement().toString());
         }
@@ -2239,13 +2407,17 @@ public class Functions {
         double number = size;
         if (number >= 1024) {
             number = number / 1024;
-            measure = "KB";
+            measure = "KiB";
             if (number >= 1024) {
                 number = number / 1024;
-                measure = "MB";
+                measure = "MiB";
                 if (number >= 1024) {
                     number = number / 1024;
-                    measure = "GB";
+                    measure = "GiB";
+                    if (number >= 1024) {
+                        number = number / 1024;
+                        measure = "TiB";
+                    }
                 }
             }
         }
@@ -2275,6 +2447,7 @@ public class Functions {
      * Advertises the minimum set of HTTP headers that assist programmatic
      * discovery of Jenkins.
      */
+    @SuppressFBWarnings(value = "UC_USELESS_VOID_METHOD", justification = "TODO needs triage")
     public static void advertiseHeaders(HttpServletResponse rsp) {
         Jenkins j = Jenkins.getInstanceOrNull();
         if (j != null) {
@@ -2282,6 +2455,14 @@ public class Functions {
             rsp.setHeader("X-Jenkins", Jenkins.VERSION);
             rsp.setHeader("X-Jenkins-Session", Jenkins.SESSION_HASH);
         }
+    }
+
+    /**
+     * @deprecated use {@link #advertiseHeaders(HttpServletResponse)}
+     */
+    @Deprecated
+    public static void advertiseHeaders(javax.servlet.http.HttpServletResponse rsp) {
+        advertiseHeaders(HttpServletResponseWrapper.toJakartaHttpServletResponse(rsp));
     }
 
     @Restricted(NoExternalUse.class) // for actions.jelly and ContextMenu.add
@@ -2323,7 +2504,7 @@ public class Functions {
     }
 
     private static @NonNull String filterIconNameClasses(@NonNull String classNames) {
-        return Arrays.stream(StringUtils.split(classNames, ' '))
+        return Arrays.stream(classNames.split(" "))
             .filter(className -> className.startsWith("icon-"))
             .collect(Collectors.joining(" "));
     }
@@ -2358,7 +2539,7 @@ public class Functions {
             return iconGuess;
         }
 
-        StaplerRequest currentRequest = Stapler.getCurrentRequest();
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
         String rootURL = currentRequest.getContextPath();
         Icon iconMetadata = tryGetIcon(iconGuess);
 
