@@ -12,22 +12,24 @@ import static org.hamcrest.Matchers.equalTo;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.WebResponse;
-import com.gargoylesoftware.htmlunit.html.DomElement;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import hudson.model.User;
+import jakarta.servlet.http.HttpServletResponse;
 import java.net.HttpURLConnection;
-import java.net.URL;
-import javax.servlet.http.HttpServletResponse;
+import java.net.URI;
 import jenkins.model.Jenkins;
 import net.sf.json.JSONObject;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.WebResponse;
+import org.htmlunit.html.DomElement;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlHiddenInput;
+import org.htmlunit.html.HtmlPage;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
@@ -36,7 +38,7 @@ import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.JenkinsRule.WebClient;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
-import org.jvnet.hudson.test.recipes.PresetData;
+import org.jvnet.hudson.test.recipes.WithTimeout;
 
 /**
  * @author dty
@@ -119,8 +121,11 @@ public class DefaultCrumbIssuerTest {
         r.submit(p.getFormByName("config"));
    }
 
-    @PresetData(PresetData.DataSet.ANONYMOUS_READONLY)
     @Test public void apiXml() throws Exception {
+        r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
+        r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy()
+                .grant(Jenkins.READ).everywhere().toEveryone()
+        );
         WebClient wc = r.createWebClient();
         r.assertXPathValue(wc.goToXml("crumbIssuer/api/xml"), "//crumbRequestField", r.jenkins.getCrumbIssuer().getCrumbRequestField());
         String text = wc.goTo("crumbIssuer/api/xml?xpath=concat(//crumbRequestField,'=',//crumb)", "text/plain").getWebResponse().getContentAsString();
@@ -139,8 +144,11 @@ public class DefaultCrumbIssuerTest {
         wc.assertFails("crumbIssuer/api/xml?xpath=concat(//crumbRequestField,'=',//crumb)", HttpURLConnection.HTTP_FORBIDDEN); // perhaps interpretable as JS number
     }
 
-    @PresetData(PresetData.DataSet.ANONYMOUS_READONLY)
     @Test public void apiJson() throws Exception {
+        r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
+        r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy()
+                .grant(Jenkins.READ).everywhere().toEveryone()
+        );
         WebClient wc = r.createWebClient();
         String json = wc.goTo("crumbIssuer/api/json", "application/json").getWebResponse().getContentAsString();
         JSONObject jsonObject = JSONObject.fromObject(json);
@@ -168,6 +176,7 @@ public class DefaultCrumbIssuerTest {
 
     @Test
     @Issue("SECURITY-626")
+    @WithTimeout(300)
     public void crumbOnlyValidForOneSession() throws Exception {
         r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         DefaultCrumbIssuer issuer = new DefaultCrumbIssuer(false);
@@ -199,24 +208,21 @@ public class DefaultCrumbIssuerTest {
 
         assertEquals(crumb1.equals(crumb2), areEqual);
 
+        HtmlForm config = p.getFormByName("config");
         if (areEqual) {
-            r.submit(p.getFormByName("config"));
+            r.submit(config);
         } else {
             replaceAllCrumbInPageBy(p, crumb1);
-            try {
-                // submit the form with previous session crumb
-                r.submit(p.getFormByName("config"));
-                fail();
-            } catch (FailingHttpStatusCodeException e) {
-                assertEquals(HttpServletResponse.SC_FORBIDDEN, e.getStatusCode());
-                assertThat(e.getResponse().getContentAsString(), containsString("No valid crumb"));
-            }
+            // submit the form with previous session crumb
+            FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> r.submit(config));
+            assertEquals(HttpServletResponse.SC_FORBIDDEN, e.getStatusCode());
+            assertThat(e.getResponse().getContentAsString(), containsString("No valid crumb"));
         }
     }
 
     private void replaceAllCrumbInPageBy(HtmlPage page, String newCrumb) {
         for (DomElement el : page.getElementsByName("Jenkins-Crumb")) {
-            el.setAttribute("value", newCrumb);
+            ((HtmlHiddenInput) el).setValue(newCrumb);
         }
     }
 
@@ -257,13 +263,9 @@ public class DefaultCrumbIssuerTest {
         String jobName2 = namePrefix + "-test2";
 
         WebRequest request1 = createRequestForJobCreation(jobName1);
-        try {
-            r.createWebClient().getPage(request1);
-            fail();
-        } catch (FailingHttpStatusCodeException e) {
-            assertEquals(HttpServletResponse.SC_FORBIDDEN, e.getStatusCode());
-            assertThat(e.getResponse().getContentAsString(), containsString("No valid crumb"));
-        }
+        FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> r.createWebClient().getPage(request1));
+        assertEquals(HttpServletResponse.SC_FORBIDDEN, e.getStatusCode());
+        assertThat(e.getResponse().getContentAsString(), containsString("No valid crumb"));
         // cannot create new job due to missing crumb
         assertNull(r.jenkins.getItem(jobName1));
 
@@ -274,14 +276,13 @@ public class DefaultCrumbIssuerTest {
 
             assertNotNull(r.jenkins.getItem(jobName2));
         } else {
-            try {
-                r.createWebClient().getPage(request2);
-                fail("Should have failed due to invalid crumb");
-            } catch (FailingHttpStatusCodeException e) {
-                assertEquals(HttpURLConnection.HTTP_FORBIDDEN, e.getStatusCode());
-                // cannot create new job due to invalid crumb
-                assertNull(r.jenkins.getItem(jobName2));
-            }
+            e = assertThrows(
+                    "Should have failed due to invalid crumb",
+                    FailingHttpStatusCodeException.class,
+                    () -> r.createWebClient().getPage(request2));
+            assertEquals(HttpURLConnection.HTTP_FORBIDDEN, e.getStatusCode());
+            // cannot create new job due to invalid crumb
+            assertNull(r.jenkins.getItem(jobName2));
         }
     }
 
@@ -302,7 +303,7 @@ public class DefaultCrumbIssuerTest {
     }
 
     private WebRequest createRequestForJobCreation(String jobName) throws Exception {
-        WebRequest req = new WebRequest(new URL(r.getURL() + "createItem?name=" + jobName), HttpMethod.POST);
+        WebRequest req = new WebRequest(new URI(r.getURL() + "createItem?name=" + jobName).toURL(), HttpMethod.POST);
         req.setAdditionalHeader("Content-Type", "application/xml");
         req.setRequestBody("<project/>");
         return req;
