@@ -12,15 +12,8 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertSame;
-import static org.junit.Assert.fail;
+import static org.junit.Assert.assertThrows;
 
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlForm;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Util;
 import hudson.model.Cause;
@@ -28,20 +21,26 @@ import hudson.model.FreeStyleProject;
 import hudson.model.User;
 import hudson.security.ACL;
 import hudson.security.ACLContext;
+import jakarta.servlet.http.HttpServletResponse;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import javax.servlet.http.HttpServletResponse;
 import jenkins.model.Jenkins;
 import jenkins.security.apitoken.ApiTokenPropertyConfiguration;
 import jenkins.security.apitoken.ApiTokenStore;
-import jenkins.security.apitoken.ApiTokenTestHelper;
 import jenkins.security.apitoken.TokenUuidAndPlainValue;
 import net.sf.json.JSONObject;
-import org.junit.Before;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.xml.XmlPage;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -57,16 +56,14 @@ public class ApiTokenPropertyTest {
     @Rule
     public JenkinsRule j = new JenkinsRule();
 
-    @Before
-    public void setupLegacyConfig() {
-        ApiTokenTestHelper.enableLegacyBehavior();
-    }
-
     /**
      * Tests the UI interaction and authentication.
      */
     @Test
     public void basics() throws Exception {
+        ApiTokenPropertyConfiguration tokenConfig = ApiTokenPropertyConfiguration.get();
+        tokenConfig.setTokenGenerationOnCreationEnabled(true);
+
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         User u = User.getById("foo", true);
         j.createWebClient().withBasicApiToken(u);
@@ -83,9 +80,9 @@ public class ApiTokenPropertyTest {
         assertEquals(u, wc.executeOnServer(User::current));
 
         // Make sure the UI shows the token to the user
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         HtmlForm form = config.getFormByName("config");
-        assertEquals(token, form.getInputByName("_.apiToken").getValueAttribute());
+        assertEquals(token, form.getInputByName("_.apiToken").getValue());
 
         // round-trip shouldn't change the API token
         j.submit(form);
@@ -118,21 +115,28 @@ public class ApiTokenPropertyTest {
     @Issue("SECURITY-200")
     @Test
     public void adminsShouldBeUnableToSeeTokensByDefault() throws Exception {
+        ApiTokenPropertyConfiguration tokenConfig = ApiTokenPropertyConfiguration.get();
+        tokenConfig.setTokenGenerationOnCreationEnabled(true);
+
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         User u = User.getOrCreateByIdOrFullName("foo");
         final ApiTokenProperty t = u.getProperty(ApiTokenProperty.class);
+        t.generateNewToken("test");
         final String token = t.getApiToken();
 
         // Make sure the UI does not show the token to another user
         WebClient wc = createClientForUser("bar");
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         HtmlForm form = config.getFormByName("config");
-        assertEquals(Messages.ApiTokenProperty_ChangeToken_TokenIsHidden(), form.getInputByName("_.apiToken").getValueAttribute());
+        assertEquals(Messages.ApiTokenProperty_ChangeToken_TokenIsHidden(), form.getInputByName("_.apiToken").getValue());
     }
 
     @Issue("SECURITY-200")
     @Test
     public void adminsShouldBeUnableToChangeTokensByDefault() throws Exception {
+        ApiTokenPropertyConfiguration tokenConfig = ApiTokenPropertyConfiguration.get();
+        tokenConfig.setTokenGenerationOnCreationEnabled(true);
+
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         User foo = User.getOrCreateByIdOrFullName("foo");
         User bar = User.getOrCreateByIdOrFullName("bar");
@@ -148,7 +152,7 @@ public class ApiTokenPropertyTest {
                 requirePOST.getWebResponse().getStatusCode());
 
         wc.setThrowExceptionOnFailingStatusCode(true);
-        WebRequest request = new WebRequest(new URL(j.getURL().toString() + foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken"), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(j.getURL().toString() + foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken").toURL(), HttpMethod.POST);
         HtmlPage res = wc.getPage(request);
 
         // TODO This nicer alternative requires https://github.com/jenkinsci/jenkins/pull/2268 or similar to work
@@ -286,13 +290,8 @@ public class ApiTokenPropertyTest {
     }
 
     private void checkUserIsNotConnected(WebClient wc) throws Exception {
-        try {
-            wc.goToXml("whoAmI/api/xml");
-            fail();
-        }
-        catch (FailingHttpStatusCodeException e) {
-            assertEquals(401, e.getStatusCode());
-        }
+        FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> wc.goToXml("whoAmI/api/xml"));
+        assertEquals(401, e.getStatusCode());
     }
 
     @Test
@@ -659,13 +658,10 @@ public class ApiTokenPropertyTest {
     }
 
     private void checkInvalidTokenValue(ApiTokenProperty apiTokenProperty, String tokenName, String tokenValue) throws Exception {
-        try {
-            apiTokenProperty.addFixedNewToken(tokenName, tokenValue);
-            fail("The invalid token " + tokenName + " with value " + tokenValue + " was accepted but it should have been rejected.");
-        }
-        catch (IllegalArgumentException iae) {
-            // no care about the exception
-        }
+        assertThrows(
+                "The invalid token " + tokenName + " with value " + tokenValue + " was accepted but it should have been rejected.",
+                IllegalArgumentException.class,
+                () -> apiTokenProperty.addFixedNewToken(tokenName, tokenValue));
     }
 
     // test no token are generated for new user with the global configuration set to false
